:wrench: changing config to only lol domain

--- a/mozilla/manifest.json
+++ b/mozilla/manifest.json
@@ -2,12 +2,16 @@
   "description": "Replaces the links from old League forums with LeagueBoards mirror link.",
   "manifest_version": 2,
   "name": "LeagueBoards.net Plugin",
-  "version": "1.0",
+  "version": "1.2",
   "homepage_url": "https://github.com/Arcyvilk/leagueboards-plugin",
   "icons": {
     "48": "icons/ico-48.png"
   },
-  "permissions": ["webRequest", "webRequestBlocking", "<all_urls>"],
+  "permissions": [
+    "webRequest",
+    "webRequestBlocking",
+    "http://*.leagueoflegends.com/*"
+  ],
   "background": {
     "scripts": ["plugin.js"]
   }
